src/objects/Items__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>No entry is required. The status is system generated depending on the review process.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Under PBS Review</fullName>
                </value>
                <value>
                    <fullName>Under FAS Review</fullName>
                </value>
                <value>
                    <fullName>Under OCFO Review</fullName>
                </value>
                <value>
                    <fullName>Under SRB Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_E_Cost__c</fullName>
        <inlineHelpText>DM&amp;E Cost plus O&amp;M Cost should be equal to the amount of the Total Cost.</inlineHelpText>
        <label>DM&amp;E Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_E_OR_O_M__c</fullName>
        <label>DM&amp;E OR O&amp;M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM&amp;E</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denied_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in report to pull Items that were first Denied but Approved later.</description>
        <label>Denied Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deny_Approved_Item_Comments__c</fullName>
        <inlineHelpText>Reserved for Approvers.</inlineHelpText>
        <label>Deny Approved Item Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deny_Approved_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>No entry is required. This field is reserved for reviewers use.</inlineHelpText>
        <label>Deny Approved Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Contractor_Personnel__c</fullName>
        <inlineHelpText>Enter Number of Estimated Contractor Personnel.</inlineHelpText>
        <label>Estimated Contractor Personnel?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>No entry is required. This field is reserved for reviewers use.</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Spend_Category__c</fullName>
        <formula>Product_Or_Service__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Spend Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Award_or_Modification__c</fullName>
        <label>New Award or Modification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Award</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Cost__c</fullName>
        <inlineHelpText>O&amp;M Cost plus DM&amp;E Cost should be equal to the amount of the Total Cost.</inlineHelpText>
        <label>O&amp;M Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Category_Explaination__c</fullName>
        <inlineHelpText>You are required to Enter a description of your category if you chose &quot;Other&quot; from the category List.</inlineHelpText>
        <label>Other Category Explaination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>For It Acquisition Planning Application - Required if Product =Not listed.</description>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Or_Service_Delete__c</fullName>
        <description>Dependent on Type and Category - Being replaced by lookup on IT Spend Layout.</description>
        <label>Product Or Service - Delete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute Software Computrace 8</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Accusoft Pegasus 3</fullName>
                </value>
                <value>
                    <fullName>ActivIdentity SecureLogin</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat 4</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat 5</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat 6</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat Professional 10</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat Professional 9</fullName>
                </value>
                <value>
                    <fullName>Adobe ColdFusion 9</fullName>
                </value>
                <value>
                    <fullName>Adobe Flash Player 10</fullName>
                </value>
                <value>
                    <fullName>Adobe JETForm Design 5</fullName>
                </value>
                <value>
                    <fullName>Adobe Reader 10</fullName>
                </value>
                <value>
                    <fullName>Adobe Reader 6</fullName>
                </value>
                <value>
                    <fullName>Adobe Reader 7.x</fullName>
                </value>
                <value>
                    <fullName>Adobe Reader 8.x</fullName>
                </value>
                <value>
                    <fullName>Adobe Reader 9</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent CBX500 Switch</fullName>
                </value>
                <value>
                    <fullName>Analog 4.0</fullName>
                </value>
                <value>
                    <fullName>Analog 5.0</fullName>
                </value>
                <value>
                    <fullName>AOL Netscape 7</fullName>
                </value>
                <value>
                    <fullName>Apache HTTP Server 1</fullName>
                </value>
                <value>
                    <fullName>Apache Tomcat 7</fullName>
                </value>
                <value>
                    <fullName>Apple iPhone 4</fullName>
                </value>
                <value>
                    <fullName>Application Implementation</fullName>
                </value>
                <value>
                    <fullName>Application Operations &amp; Maintenance</fullName>
                </value>
                <value>
                    <fullName>Application Security Inc AppDetectivePro</fullName>
                </value>
                <value>
                    <fullName>Application Testing</fullName>
                </value>
                <value>
                    <fullName>Architecture Standards Maintenance</fullName>
                </value>
                <value>
                    <fullName>ASG-becubic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Or_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Type product/service name starting with a * (*Excel). If service not known, use *e* for search (will not work for software/hardware). If you still cannot find your product/service, enter &quot;Not Listed.&quot;</inlineHelpText>
        <label>Product Or Service</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <valueField>Spend_Request_Product_Lookup__c.Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Spend_Request_Product_Lookup__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Approved - Remove, Denied</value>
            </filterItems>
            <infoMessage>You can use a wildcard when searching:  As long as there are two letters a &quot;*&quot; can be used in place of the rest of the text that you are submitting.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Spend_Request_Product_Lookup__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Standard_or_Not_Listed__c</fullName>
        <description>Hidden field for reporting Standard or not listed product names</description>
        <label>Product Standard or Not Listed</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Category__c</fullName>
        <label>Professional Services Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Education and Training Support Services</fullName>
                </value>
                <value>
                    <fullName>Engineering and Scientific Services</fullName>
                </value>
                <value>
                    <fullName>Financial Management Services</fullName>
                </value>
                <value>
                    <fullName>Logistics Services</fullName>
                </value>
                <value>
                    <fullName>Management Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement/Contract Specialist Support Services</fullName>
                </value>
                <value>
                    <fullName>Program Management Services</fullName>
                </value>
                <value>
                    <fullName>Secretarial/Clerical Support Services</fullName>
                </value>
                <value>
                    <fullName>Travel and Transportation support services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Submit_Denied_Items_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are trying to Re-Submit the Denied Item, address the needed corrective action before checking the &quot;Re-Submit Denied Item for Approval&quot; checkbox.</inlineHelpText>
        <label>Re-Submit Denied Item for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spend_Request_Number__c</fullName>
        <label>Spend Request Number</label>
        <referenceTo>Spend_Request__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>T_M_or_FFP__c</fullName>
        <label>T&amp;M or FFP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T&amp;M (Time and Materials)</fullName>
                </value>
                <value>
                    <fullName>Labor Hour</fullName>
                </value>
                <value>
                    <fullName>Cost Reimbursable</fullName>
                </value>
                <value>
                    <fullName>Firm Fixed Price</fullName>
                </value>
                <value>
                    <fullName>LOE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost_Remove__c</fullName>
        <description>This Field is being replaced by the new Currency field &quot;Total Cost&quot; This can be removed from the page layout.</description>
        <formula>Unit_Cost__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost - Remove</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Populated by workflow to calculate the Total of the O&amp;M and DM&amp;E fields if the request is IT Spend and Calculates the Unit Cost X Quantity if the Request is a Professional Services Request.</description>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>IT Services</fullName>
                </value>
                <value>
                    <fullName>PROFESSIONAL SERVICES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measurement__c</fullName>
        <inlineHelpText>Likely unit of time. 

Example: Hours, Weeks, Months, or Firm Fixed Price.</inlineHelpText>
        <label>Unit of Measurement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_If_Known__c</fullName>
        <label>Vendor (If Known)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Populated_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for reporting purposes only</description>
        <label>Vendor Populated</label>
        <type>Checkbox</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All_Items</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Items</label>
    </listViews>
    <listViews>
        <fullName>Follow_Up_Items</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>Follow_Up__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Follow-Up Items</label>
    </listViews>
    <listViews>
        <fullName>IT_Spend_Items</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Items__c.IT_Spend_Item</value>
        </filters>
        <label>IT Spend Items</label>
    </listViews>
    <listViews>
        <fullName>Legacy_IT_Spend_Items</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Items__c.IT_Spend_Item_Record_Type</value>
        </filters>
        <label>Legacy IT Spend Items</label>
    </listViews>
    <listViews>
        <fullName>Legacy_Professional_Services_Items</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Items__c.Legacy_Professional_Services_Item</value>
        </filters>
        <label>Legacy Professional Services Items</label>
    </listViews>
    <listViews>
        <fullName>Professional_Services_Items</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Items__c.Professional_Services_Item</value>
        </filters>
        <label>Professional Services Items</label>
    </listViews>
    <listViews>
        <fullName>Under_FAS_Review</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Under FAS Review</value>
        </filters>
        <label>Under FAS Review</label>
    </listViews>
    <listViews>
        <fullName>Under_OCFO_Review</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Under OCFO Review</value>
        </filters>
        <label>Under OCFO Review</label>
    </listViews>
    <listViews>
        <fullName>Under_PBS_Review</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Under PBS Review</value>
        </filters>
        <label>Under PBS Review</label>
    </listViews>
    <listViews>
        <fullName>Under_SRB_Review</fullName>
        <columns>NAME</columns>
        <columns>Spend_Request_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Under SRB Review</value>
        </filters>
        <label>Under SRB Review</label>
    </listViews>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <recordTypes>
        <fullName>IT_Spend_Item</fullName>
        <active>true</active>
        <description>An activity affecting IT asset planning, development, or maintenance.</description>
        <label>IT Spend Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Spend_Item_Record_Type</fullName>
        <active>true</active>
        <description>An activity affecting IT asset planning, development, or maintenance</description>
        <label>Legacy IT Spend Item Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Professional_Services_Item</fullName>
        <active>true</active>
        <description>An activity providing management or advisory support.</description>
        <label>Legacy Professional Services Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Services_Item</fullName>
        <active>true</active>
        <description>An activity providing management or advisory support</description>
        <label>Professional Services Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Category_Description_Required</fullName>
        <active>true</active>
        <description>Will Require a Description of the Category if &quot;Other&quot; is chosen in the Category Picklist for Professional Services Record Type OR If Category Value in the Category Field = Other for IT Spend Category.</description>
        <errorConditionFormula>AND( 
OR( 
 ISPICKVAL( Professional_Services_Category__c , &quot;Other&quot;) ,
 IT_Spend_Category__c  = &quot;Other&quot;) , ISBLANK( Other_Category_Explaination__c ) )</errorConditionFormula>
        <errorDisplayField>Other_Category_Explaination__c</errorDisplayField>
        <errorMessage>You are required to enter a Category Explanation if IT Product or Service or Professional Service you&apos;ve chosen has a category of &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Denied_ReSubmit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Re_Submit_Denied_Items_for_Approval__c == TRUE,
ISPICKVAL ( Approval_Status__c, &quot;Not Submitted&quot;)
)</errorConditionFormula>
        <errorMessage>Re-Submit checkbox can be checked, only if Approval Status is Denied.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deny_Approved_Item</fullName>
        <active>true</active>
        <description>&quot;Deny Approved Item&quot; check box can be checked, only when &quot;Approval Status&quot; is Approved.</description>
        <errorConditionFormula>AND( Deny_Approved_Item__c == TRUE , 
NOT( ISPICKVAL( Approval_Status__c , &quot;Approved&quot; ) 
) 
)</errorConditionFormula>
        <errorDisplayField>Deny_Approved_Item__c</errorDisplayField>
        <errorMessage>&quot;Deny Approved Item&quot; check box can be checked, only when &quot;Approval Status&quot; is Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deny_Approved_Item_Comments</fullName>
        <active>true</active>
        <description>&quot;Deny Approved Item Comments&apos; cannot be empty, when &quot;Deny Approved Item&quot; is checked.</description>
        <errorConditionFormula>AND( Deny_Approved_Item__c , ISBLANK( Deny_Approved_Item_Comments__c ))</errorConditionFormula>
        <errorDisplayField>Deny_Approved_Item_Comments__c</errorDisplayField>
        <errorMessage>&quot;Deny Approved Item Comments&apos; needs to be provided upon Denying Approved Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_Contractor_Personnel</fullName>
        <active>true</active>
        <description>&quot;Estimated Contractor Personnel?&quot; field cannot be less than one.</description>
        <errorConditionFormula>Estimated_Contractor_Personnel__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Estimated_Contractor_Personnel__c</errorDisplayField>
        <errorMessage>&quot;Estimated Contractor Personnel?&quot; field cannot be less than one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IT_Spend_Item_Spend_Request_Invest_Appl</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName == &quot;IT_Spend_Item&quot; ,  OR(ISPICKVAL( Spend_Request_Number__r.Investment__c , &quot;&quot; ) ,   ISPICKVAL( Spend_Request_Number__r.Application__c , &quot;&quot;)) )</errorConditionFormula>
        <errorMessage>To create/edit an IT Spend Item, please ensure that Investment &amp; Application fields on Spend Request are filled in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_New_Items</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() , (   Spend_Request_Number__r.Lock_Spend_Request__c ) )</errorConditionFormula>
        <errorMessage>You may NOT add a new line item once the request has been submitted for approval. If you would like to make any changes, click Recall Approval Request button on the Spend Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Name_Required_if_Not_Listed</fullName>
        <active>true</active>
        <description>Will require a user to enter a product name if they have picked the value of Not listed in the product field</description>
        <errorConditionFormula>AND( Product_Or_Service__r.Name=&quot;Not Listed&quot;, 
ISBLANK( Product_Name__c ))</errorConditionFormula>
        <errorDisplayField>Product_Name__c</errorDisplayField>
        <errorMessage>You have chosen &quot;Not Listed&quot; as your product.  Please supply the name of the product in the Product Name field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_cannot_be_a_negative_Value</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c   &lt;=  0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>You cannot have a negative quantity or quantity cannot equal zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unit_Cost_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Used in the IT Acquisition Planning App - Will not let the user submit a negative number in  the unit cost field.</description>
        <errorConditionFormula>Unit_Cost__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Unit_Cost__c</errorDisplayField>
        <errorMessage>You cannot have a negative unit cost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Req_if_FollowOn</fullName>
        <active>true</active>
        <description>If Contract type of Follow-On is chosen, then the Vendor Name should be required.</description>
        <errorConditionFormula>AND(ISPICKVAL( New_Award_or_Modification__c , &quot;Follow-On&quot;), ISBLANK( Vendor_If_Known__c ))</errorConditionFormula>
        <errorDisplayField>Vendor_If_Known__c</errorDisplayField>
        <errorMessage>You have selected &quot;Follow-On&quot; For your Vendor Type therefore a Vendor name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Req_if_Modification</fullName>
        <active>true</active>
        <description>&quot;Vendor (If Known)&quot; field is required when &quot;Modification&quot; is selected in &quot;New Award or Modification&quot; field.</description>
        <errorConditionFormula>AND(ISPICKVAL( New_Award_or_Modification__c , &quot;Modification&quot;), ISBLANK( Vendor_If_Known__c ))</errorConditionFormula>
        <errorDisplayField>Vendor_If_Known__c</errorDisplayField>
        <errorMessage>&quot;Vendor (If Known)&quot; field is required when &quot;Modification&quot; is selected in &quot;New Award or Modification&quot; field.</errorMessage>
    </validationRules>
</CustomObject>